--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
             <h3>Social Profiles</h3>
             <div class="social-links">
               <a href="https://twitter.com/vikram_0_0_7" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="mailto:aswanthramana.cs20@bitsathy.ac.in"><i class="bi bi-google" aria-hidden="true"></i></a>
+              <a href="mailto:vikramsaravanan.cs20@bitsathy.ac.in"><i class="bi bi-google" aria-hidden="true"></i></a>
               <a href="https://www.instagram.com/vikram_0_0_7/" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.linkedin.com/in/vikram-saravanan-s-a43636214/" class="linkedin"><i class="bi bi-linkedin"></i></a> 
               <a href="https://github.com/VIKRAM-SARAVANAN-S" class="github"><i class="bi bi-github"></i></a>
