--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -76,9 +76,9 @@
 
       <div class="container">
         <h4  style="color:#4ceb95;"><em><u style="  text-decoration-line: underline;
-          text-decoration-color: #ffffff;">BIT Laundary</u></em> </h4>
+          text-decoration-color: #ffffff;">BIT Laundry</u></em> </h4>
         <h5>Role: Team Member</h5>
-        <p>An Application for Laundary Management Software (Clothing or Modifications Business, Laundary) by Team of 5 Members</p>
+        <p>An Application for Laundry Management Software (Clothing or Modifications Business, Laundry) by Team of 5 Members</p>
 
         <h4 style="color:#4ceb95;"><em><u style="  text-decoration-line: underline;
           text-decoration-color: #ffffff;">Private Safe using NFC </u></h4>
