--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Full &amp; Stack  Developer</h3>
+          <h3>Full Stack  Developer</h3>
           <p class="fst-italic">
             To pursue a job opportunity in a competitive environment that will challenge me to push my boundaries and expand my knowledge in the field of computer science while allowing me to add value to the dynamics of the company. </p>
               
